JEAP-6885: update to spring boot 4